--- a/index2.html
+++ b/index2.html
@@ -13,16 +13,18 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="top">
+        <div class="header">
 
-        <span class="welcome">WELCOME TO INDIA</span>
+            <b> <span class="welcome">Trip TO Paris</span> </b>
 
-    </div>
-    <div class="middle">
-        <a href="./index.html"> <i class="fa-solid fa-circle-left text"></i></a>
+        </div>
+        <div class="middle">
+            <a href="./index.html"> <i class="fa-solid fa-circle-left text"></i></a>
+        </div>
     </div>
     <div class="box">
-        <b><span class="style">Trip TO London</span></b>
+        <b><span class="style">Trip TO Paris</span></b>
         <hr class="space">
         <br>
         <p>Completed Task</p>
